# roguelike-noname

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
config/: gameOptions.json  prefabs.json
src/: CMakeLists.txt  Game.cpp  Game.h  GameCtx.cpp  GameCtx.h  Renderer.cpp  Renderer.h
src/commands/: AttackCommand.cpp  AttackCommand.h  Command.h  CommandQueue.cpp  CommandQueue.h  MoveCommand.cpp  MoveCommand.h
src/entity/: CMakeLists.txt  Entity.cpp  Entity.h  Hero.cpp  Hero.h
src/entity/components/: Actions.h  CollisionBox.cpp  CollisionBox.h  Inventory.h  MapPosition.h  Named.h  Position.h  RenderInfo.cpp  RenderInfo.h  Stats.h  Tags.h  Viewport.h
src/entity/generators/: EntitySpawner.cpp  EntitySpawner.h
src/events/: AttackEvent.cpp  AttackEvent.h  Event.cpp  Event.h  EventStore.cpp  EventStore.h  ItemFoundEvent.cpp  ItemFoundEvent.h  TestEvent.cpp  TestEvent.h
src/items/: Item.h  ItemContainer.cpp  ItemContainer.h  SwordItem.cpp  SwordItem.h
src/lib/: Graph.cpp  Graph.h  Loaders.cpp  Loaders.h  MapAlgorithms.cpp  MapAlgorithms.h  REXSpeeder.cpp  REXSpeeder.h  Services.h
src/scenes/: IntroScene.cpp  IntroScene.h  InventoryScene.cpp  InventoryScene.h  PlayScene.cpp  PlayScene.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/states/: GameState.h  PlayerTurn.cpp  PlayerTurn.h
src/systems/: CameraSystem.cpp  CameraSystem.h  CellInfoSystem.cpp  CellInfoSystem.h  HeroSystem.cpp  HeroSystem.h  MapRenderedSystem.cpp  MapRendererSystem.h  Systems.cpp  Systems.h  WorldUpdateSystem.cpp  WorldUpdateSystem.h
src/ui/: LogOverlay.cpp  LogOverlay.h  Overlay.cpp  Overlay.h  StatsOverlay.cpp  StatsOverlay.h  UIDebugOverlay.cpp  UIDebugOverlay.h
src/utils/: Rng.cpp  Rng.h  util.h
src/world/: CMakeLists.txt  Cell.cpp  Cell.h  Map.cpp  Map.h  MapElement.cpp  MapElement.h  MapPosition.cpp  MapPosition.h  MapPrefab.cpp  MapPrefab.h  MapPrefabs.cpp  MapPrefabs.h  Room.cpp  Room.h  RoomGraph.cpp  RoomGraph.h  WorldBuilder.cpp  WorldBuilder.h
